# FileViewer

./: .gitignore  CMakeLists.txt  README.md
src/: FileSystemModel.cpp  FileSystemModel.h  FileSystemPresenter.cpp  FileSystemPresenter.h  IDisplaySettings.h  IniLetterDelegate.cpp  IniLetterDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  filesystemmodel.cpp  filesystemmodel.h  main.cpp  mainwindow.cpp  mainwindow.ui
